actualización en los links

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossOrigin="True" />
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
-    <title>React App</title>
+    <title>Asociación de Grupos de Scouts</title>
   </head>
   <body style="background-color: #F7F7F7;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
